--- a/資料密集型應用程式設計.md
+++ b/資料密集型應用程式設計.md
@@ -4,6 +4,9 @@
 
 - p.15 在高百分位數的區段，影響回應時間的大多數原因來自於排隊。 因為CPU並行處理能力的上限，只要有少量慢請求產生，後續請求就會被擋住，此現象稱為隊頭阻塞(head-of-line blocking)
 
+
+## 資料模型與查詢語言
+
 - p.39 多對一和多對多關係，relational model比document model的支援更佳。
 在多對多的情況下，對document model發出多次請求可以模擬類似join的效果，但通常會使應用程式變複雜，需要處理反規則化導致的重複資料一致性問題，以及使性能更差。
 
