--- a/資料密集型應用程式設計.md
+++ b/資料密集型應用程式設計.md
@@ -10,3 +10,4 @@
 - p.39 多對一和多對多關係，relational model比document model的支援更佳。
 在多對多的情況下，對document model發出多次請求可以模擬類似join的效果，但通常會使應用程式變複雜，需要處理反規則化導致的重複資料一致性問題，以及使性能更差。
 
+-p.43 宣告式語言（e.g. SQL) 通常用於平行執行，現今加快計算處理速度通常是透過增加CPU核心，而不是拉高時脈。資料庫都傾向採用平行方式來實現查詢語言
