--- a/資料密集型應用程式設計.md
+++ b/資料密集型應用程式設計.md
@@ -11,3 +11,6 @@
 在多對多的情況下，對document model發出多次請求可以模擬類似join的效果，但通常會使應用程式變複雜，需要處理反規則化導致的重複資料一致性問題，以及使性能更差。
 
 - p.43 宣告式語言（e.g. SQL, 只需描述想要的結果，不像命令式需描述如何實現) 通常用於平行執行，現今加快計算處理速度通常是透過增加CPU核心，而不是拉高時脈。資料庫都傾向採用平行方式來實現查詢語言
+
+-p.46, p.48 一些NoSQL支援MapReduce（宣告式和命令式的混合的程式設計模型，宣告式的型態，命令式的實作。
+Map處理數據輸入，生成key value pair/Reduce針對各個key進行aggregate或其他處理，兩者皆必須是pure functions，不執行額外Db查詢），以此執行跨機器叢集的查詢
