--- a/資料密集型應用程式設計.md
+++ b/資料密集型應用程式設計.md
@@ -12,5 +12,11 @@
 
 - p.43 宣告式語言（e.g. SQL, 只需描述想要的結果，不像命令式需描述如何實現) 通常用於平行執行，現今加快計算處理速度通常是透過增加CPU核心，而不是拉高時脈。資料庫都傾向採用平行方式來實現查詢語言
 
--p.46, p.48 一些NoSQL支援MapReduce（宣告式和命令式的混合的程式設計模型，宣告式的型態，命令式的實作。
+- p.46, p.48 一些NoSQL支援MapReduce（宣告式和命令式的混合的程式設計模型，宣告式的型態，命令式的實作。
 Map處理數據輸入，生成key value pair/Reduce針對各個key進行aggregate或其他處理，兩者皆必須是pure functions，不執行額外Db查詢），以此執行跨機器叢集的查詢
+
+## 資料儲存與檢索
+
+- p.90 in-memory databases相較於基於磁碟的儲存引擎，其性能優不是因為它們不需要從磁碟讀取資料。
+  只要記憶體充足，作業系統會將最近使用到的資料快取在記憶體中，所以就算基於磁碟，後者也很可能很少需要從磁碟來讀取資料。
+  In-memory databases之所以快，主要是因為它們**省去了將in-memory資料結構編碼成可寫入磁碟的格式**的這段行為
